frontend/test/should_fail/array_removeIf_index_scalar.grg
test array_map(ref a:array<int>) {
	if {
		a.removeIf{idx:string -> value:int -> idx % 2 == 1}.empty();
	}	
}
